tests/error/comptime/check_slice_construction02.bz
// error: invalid memory range for a slice of type '[: int32]'
// note: while evaluating expression at compile time
// note: end address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		__builtin_slice_from_ptrs(&i, foo());
	});
}
